// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RoomListToast /> > renders ChatMoved story 1`] = `
<div>
  <div
    style="position: relative; width: 320px; height: 100px; background-color: grey;"
  >
    <div
      class="_toast-container_1jkz7_8 RoomListToast-module_toast _has-close_1jkz7_59"
    >
      <div
        class="_typography_6v6n8_153 _font-body-sm-medium_6v6n8_41 _content_1jkz7_68"
      >
        Chat moved
      </div>
      <button
        aria-labelledby="react-use-id-1"
        class="_icon-button_1215g_8 _close_1jkz7_75 _no-background_1215g_42"
        data-kind="secondary"
        role="button"
        style="--cpd-icon-button-size: 24px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<RoomListToast /> > renders SectionCreated story 1`] = `
<div>
  <div
    style="position: relative; width: 320px; height: 100px; background-color: grey;"
  >
    <div
      class="_toast-container_1jkz7_8 RoomListToast-module_toast _has-close_1jkz7_59"
    >
      <div
        class="_typography_6v6n8_153 _font-body-sm-medium_6v6n8_41 _content_1jkz7_68"
      >
        Section created
      </div>
      <button
        aria-labelledby="react-use-id-1"
        class="_icon-button_1215g_8 _close_1jkz7_75 _no-background_1215g_42"
        data-kind="secondary"
        role="button"
        style="--cpd-icon-button-size: 24px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
